--- a/pages/posts/post.wxml
+++ b/pages/posts/post.wxml
@@ -11,7 +11,7 @@
       <image src='../../images/vr.png'></image>
     </swiper-item>
   </swiper>
-  <block wx:for="{{postList}}" wx:for-item="item" wx:for-index="idx">
+  <block wx:for="{{postList}}" wx:key="postId">
     <view catchtap="onPostTap" data-postid="{{item.postId}}">
       <template is="postItem" data="{{...item}}" />
     </view>
